connect both part

--- a/template/chess/index.html
+++ b/template/chess/index.html
@@ -5,7 +5,12 @@
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
+
         <button type="submit">Submit</button>
     </form>
+
+
+ 
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAJCAIAAACExCpEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAASSURBVChTY5DutMGDRqZ0pw0A4ZNOwQNf">
     
 {% endblock %}
