--- a/template/base.html
+++ b/template/base.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Virtual Chess</title>
+        {% load static %}
     </head>
     <body>
         <h1>Welcome to Chess</h1>
