--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,6 +4,10 @@
 	text-decoration: underline;
 }
 
+#id{
+	width: 500px;
+}
+
 .hidden {
 	/*visibility: hidden;*/
 	display: none;
@@ -12,21 +16,21 @@
 	margin-top : ;
 }
 
-.flex-container {
-  display: flex;
-  background-color: DodgerBlue;
-  margin-left: 450px;
-  margin-right: 450px;
-}
+.hvr-shadow {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: box-shadow;
+	transition-property: box-shadow;
+  }
+  .hvr-shadow:hover, .hvr-shadow:focus, .hvr-shadow:active {
+	box-shadow: 0 10px 10px -10px rgba(255, 255, 255, 0.7);
+  }
 
-.flex-container > div {
-  background-color: #f1f1f1;
-  color:black;
-  max-width: 700px;
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
-}
 .form-cust{
 	margin-top: 25px;
 	margin-left: 25px;
@@ -35,3 +39,47 @@
 .form-cust>input{
 	margin-left: 25px;
 }
+
+/* Bounce To Right */
+.hvr-bounce-to-right {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	position: relative;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+  }
+  .hvr-bounce-to-right:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #2ebd59;
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transform-origin: 0 50%;
+	transform-origin: 0 50%;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+  }
+  .hvr-bounce-to-right:hover, .hvr-bounce-to-right:focus, .hvr-bounce-to-right:active {
+	color: white;
+  }
+  .hvr-bounce-to-right:hover:before, .hvr-bounce-to-right:focus:before, .hvr-bounce-to-right:active:before {
+	-webkit-transform: scaleX(1);
+	transform: scaleX(1);
+	-webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+	transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  }
+  
