--- a/template/chess/index.html
+++ b/template/chess/index.html
@@ -17,6 +17,7 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <style>
 	body {
@@ -92,7 +93,7 @@
         </div>
             <div class="header-overlay"></div>
                 <div class="header-content">
-                    <h1>Virtual Chess Environment</h1>
+                    <h1 class="glow">Virtual Chess Environment</h1>
 					<div class="wrapper">
 						<a href="#" class="fancy-button pop-onhover bg-gradient1 button"><span>Start !!!</span></a>
 					</div>
