--- a/static/css/home.css
+++ b/static/css/home.css
@@ -130,18 +130,48 @@ body{
     width: 100vw;
     position: absolute;
     top: 0;
-    left: 0;
+	left: 0;
 }
 
 .header-content {
     z-index: 2;
 }
+
+.glow {
+text-shadow: 0 1px 0 #ccc, 
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+/* text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1); */
+	/* color: #444;
+	text-shadow: 
+	  1px 0px 1px #ccc, 0px 1px 1px #eee, 
+	  2px 1px 1px #ccc, 1px 2px 1px #eee,
+	  3px 2px 1px #ccc, 2px 3px 1px #eee,
+	  4px 3px 1px #ccc, 3px 4px 1px #eee,
+	  5px 4px 1px #ccc, 4px 5px 1px #eee,
+	  6px 5px 1px #ccc, 5px 6px 1px #eee,
+	  7px 6px 1px #ccc; */
+  }
+
 .header-content h1{
-    font-size: 100px;
+	margin-top: 10px;
+	font-family: 'Bebas Neue', cursive;
+    font-size: 200px;
 	margin-bottom: 0;
-	-webkit-text-fill-color: white; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: black;
+	-webkit-text-fill-color: white; 
+  /* -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black; */
 }
 
 .btn{
