--- a/template/chess/play.html
+++ b/template/chess/play.html
@@ -30,7 +30,7 @@
             margin-left: 50px; 
             overflow-y: scroll;
             width:680px;
-            height: 350px;
+            height: 650px;
             /* background-color: whitesmoke; */
         }
         </style>
@@ -50,19 +50,27 @@
         <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6">
-                {% for key,value in sample.items %}
-            
-                    {% if key == "image" %}
-                        <div id="svg" style="margin-top: 100px; ">
+                        <div id="svgtag" style="margin-top: 100px; ">
                             
                             <!-- <img   width="100%" height="480px"  alt="Embedded Image" src="data:image/png;base64,{{value}}" style="margin=30px;"> -->
                         </div>
-                    {% else %}
+                
                         <!-- <p>{{value}}</p> -->
-                    {% endif %}
-                {% endfor %}
             </div>
             <div class="col-lg-6"  style="background-color:black;margin-top:100px;">
+                <!-- <table>
+                    <tr style="color:white;margin-left: 20px;margin-top: 20px;">
+                        <td>Move NO </td>
+                        <td>timeOfMove</td>
+                        <td>move</td>
+                        <td>depthOfSearch</td>
+                        <td>Score</td>
+                        <td>bestCounterMove</td>
+                    </tr>
+                    <tr id="tablmove">
+                    </tr>
+                    
+                </table> -->
                 <p id="dynami" ></p>
             </div>
         </div>
@@ -76,10 +84,10 @@
         //         }, 3000);
         function loadlink(){
             $.ajax({url: "/end/", success: function(result){
-                console.log(result["cont"])
-                console.log(result["svg"])
-                $("#svg").html(result["svg"])
-                // $("#dynami").append("<br>"+result["cont"]);
+                // console.log(result["cont"])
+                // console.log(result["svg"])
+                $("#svgtag").html(result["svg"])
+                $("#dynami").append("<hr style='color:white'><br>"+"Move No: "+result["move_no"] + "<br>TimeofMove : " +result["timeOfMove"]+"<br>Move : "+result["move"]+"<br>Depth Of Search : "+result["depthOfSearch"]+"<br>Score : "+result["Score"]+"<br>Best Counter Move : "+result["bestCounterMove"]);
                 
             }});
         }
@@ -88,7 +96,7 @@
             loadlink()
             var objDiv = document.getElementById("dynami");
             objDiv.scrollTop = objDiv.scrollHeight;
-        }, 3000);
+        }, 2000);
 
         
     </script>
